<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cocktailworld.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_alcoholic"
        android:name="com.example.cocktailworld.ui.alcoholic.AlcoholicFragment"
        android:label="@string/title_alcoholic"
        tools:layout="@layout/fragment_alcoholic" />

    <fragment
        android:id="@+id/navigation_non_alcoholic"
        android:name="com.example.cocktailworld.ui.nonAlcoholic.NonAlcoholicFragment"
        android:label="@string/title_non_alcoholic"
        tools:layout="@layout/fragment_non_alcoholic" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.cocktailworld.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>