<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="650sp"
        android:layout_margin="40sp"
        app:cardCornerRadius="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cocktail_yellow">

            <androidx.cardview.widget.CardView

                android:id="@+id/profileCardView"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_marginTop="25sp"
                app:cardCornerRadius="100sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/heading_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40sp"
                android:paddingBottom="20dp"
                android:text="@string/heading_id"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileCardView" />

            <TextView
                android:id="@+id/heading_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="@string/heading_name"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_id" />

            <TextView
                android:id="@+id/heading_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="@string/heading_category"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_name" />

            <TextView
                android:id="@+id/heading_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="@string/heading_type"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_category" />

            <TextView
                android:id="@+id/heading_glass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="@string/heading_glassType"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_type" />

            <TextView
                android:id="@+id/heading_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15sp"
                android:text="@string/heading_instructions"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_glass" />

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-190dp"
                android:layout_marginTop="40sp"
                android:paddingBottom="20dp"
                android:text="ID"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileCardView" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="Name"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                app:layout_constraintLeft_toRightOf="@+id/heading_name"
                app:layout_constraintTop_toBottomOf="@id/id" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="Category"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/heading_category"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="Type"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/heading_type"
                app:layout_constraintTop_toBottomOf="@id/category" />

            <TextView
                android:id="@+id/glassType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:paddingBottom="20dp"
                android:text="Glass Type"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/heading_glass"
                app:layout_constraintTop_toBottomOf="@id/type" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:text="Instructions"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/heading_instructions"
                app:layout_constraintTop_toBottomOf="@id/glassType" />

            <View
                android:id="@+id/bottomLine"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/cocktail_pink"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:id="@+id/bottomLine1"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/cocktail_pink"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>